<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="@font/eightbitdragon"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/eightbitdragon"
        android:hint="@string/hint_title"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="@font/eightbitdragon"
        />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_desc"
        android:fontFamily="@font/eightbitdragon"
        android:layout_marginBottom="10dp"

        />


    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="@font/eightbitdragon"
        />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_km"
        android:fontFamily="@font/eightbitdragon"
        android:layout_marginBottom="10dp"

        />


    <TextView
        android:id="@+id/tvStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stars"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="@font/eightbitdragon"
        />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_marginBottom="10dp"
        android:theme="@style/RatingBar"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnInsertWeapon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/btnInsert"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#3949AB" />

        <Button
            android:id="@+id/btnShowList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/btnShowList"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#3949AB" />

    </LinearLayout>

</LinearLayout>